tests/Errors/Generic/Formatting/SpaceAfterCast/NoSpace.php
<?php

declare(strict_types=1);

$foo = 123;

echo (string)$foo;
